--- a/about/index.html
+++ b/about/index.html
@@ -11,11 +11,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
   <link rel="manifest" href="../images/site.webmanifest">
   <meta name="description" content="About page for Delicious Recipes">
-  <link rel="stylesheet" href="../styles/main.css">
   <title>About</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
